[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/Parchment_Background.png" type="Texture" id=1]
[ext_resource path="res://scripts/equipment_manager.gd" type="Script" id=2]
[ext_resource path="res://objects/equipment_inv_tile.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/mobius_eel.png" type="Texture" id=4]
[ext_resource path="res://fonts/times.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://objects/journal_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://themes/journal_button_disabled.tres" type="StyleBox" id=7]
[ext_resource path="res://scripts/equipment_buttons.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=3]
size = 43
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 28
outline_color = Color( 0.305882, 0.290196, 0.203922, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1040, 264 )
scale = Vector2( 2.67862, 1.43498 )
texture = ExtResource( 1 )
offset = Vector2( -29.8661, 195.125 )
__meta__ = {
"_edit_lock_": true
}

[node name="equipment label" type="RichTextLabel" parent="."]
margin_left = 176.0
margin_top = 496.0
margin_right = 512.0
margin_bottom = 576.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Equipment:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipped label" type="RichTextLabel" parent="."]
margin_left = 336.0
margin_top = 144.0
margin_right = 672.0
margin_bottom = 248.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Item 
Equipped:[/center]"
text = "Item 
Equipped:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inv_tile_button1" parent="." instance=ExtResource( 3 )]
margin_left = 176.0
margin_top = 552.0
margin_right = 376.0
margin_bottom = 752.0
start_focused = true

[node name="inv_tile_button2" parent="." instance=ExtResource( 3 )]
margin_left = 400.0
margin_top = 552.0
margin_right = 600.0
margin_bottom = 752.0

[node name="inv_tile_button3" parent="." instance=ExtResource( 3 )]
margin_left = 624.0
margin_top = 552.0
margin_right = 824.0
margin_bottom = 752.0

[node name="inv_tile_button4" parent="." instance=ExtResource( 3 )]
margin_left = 176.0
margin_top = 776.0
margin_right = 376.0
margin_bottom = 976.0

[node name="inv_tile_button5" parent="." instance=ExtResource( 3 )]
margin_left = 400.0
margin_top = 776.0
margin_right = 600.0
margin_bottom = 976.0

[node name="inv_tile_button6" parent="." instance=ExtResource( 3 )]
margin_left = 624.0
margin_top = 776.0
margin_right = 824.0
margin_bottom = 976.0

[node name="inv_tile_button7" parent="." instance=ExtResource( 3 )]
margin_left = 400.0
margin_top = 248.0
margin_right = 600.0
margin_bottom = 448.0

[node name="item_desc_bg" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( 1377.63, 536 )
scale = Vector2( 1.27242, 1.31315 )
texture = ExtResource( 1 )

[node name="item_name" type="RichTextLabel" parent="item_desc_bg"]
anchor_left = 0.113
anchor_right = 0.921
anchor_bottom = 0.154
margin_left = -340.597
margin_top = -323.0
margin_right = -334.149
margin_bottom = -328.984
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]ITEM/FISH NAME"
text = "ITEM/FISH NAME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_sprite" type="Sprite" parent="item_desc_bg"]
position = Vector2( -1.27698, -91.3831 )
scale = Vector2( 0.598725, 0.598725 )
texture = ExtResource( 4 )

[node name="flavor_text_bg" type="Sprite" parent="item_desc_bg"]
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( -1.27707, 195.093 )
scale = Vector2( 0.874009, 0.309192 )
texture = ExtResource( 1 )

[node name="flavor_text" type="RichTextLabel" parent="item_desc_bg"]
margin_left = -278.0
margin_top = 110.0
margin_right = 269.0
margin_bottom = 286.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "this it the item description of the selected item. This very creepy/weird looking fish is scary, and it came from the deep!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equip_button" parent="item_desc_bg" instance=ExtResource( 6 )]
margin_left = -83.0151
margin_top = 225.412
margin_right = -434.835
margin_bottom = 282.412
custom_fonts/font = SubResource( 5 )
custom_styles/disabled = ExtResource( 7 )
text = "EQUIP"
script = ExtResource( 8 )
